[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/DungeonGeneration/HallwayRouting.gd" type="Script" id=1]
[ext_resource path="res://scripts/DungeonGeneration/Triangulation.gd" type="Script" id=2]
[ext_resource path="res://scripts/DungeonGeneration/RoomGeneration.gd" type="Script" id=3]
[ext_resource path="res://scripts/DungeonGeneration/DungeonGenerator.gd" type="Script" id=4]
[ext_resource path="res://scripts/DungeonGeneration/HallwayGeneration.gd" type="Script" id=5]
[ext_resource path="res://scripts/DungeonGeneration/RoomSeparation.gd" type="Script" id=6]
[ext_resource path="res://scripts/DungeonGeneration/GraphGeneration.gd" type="Script" id=7]
[ext_resource path="res://scripts/DungeonGeneration/MainRoomPicking.gd" type="Script" id=8]

[node name="DungeonGenerator" type="Node2D"]
script = ExtResource( 4 )

[node name="States" type="Node" parent="."]

[node name="RoomGeneration" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="RoomSeparation" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="MainRoomPicking" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Triangulation" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="GraphGeneration" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="HallwayRouting" type="Node" parent="States"]
script = ExtResource( 1 )

[node name="HallwayGeneration" type="Node" parent="States"]
script = ExtResource( 5 )
